--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,12 @@
 <resources>
     <string name="app_name">Chargers Tickets</string>
+    <string name="buy_tickets">Buy Tickets</string>
+    <string name="my_orders">My Orders</string>
+    <string name="chargers_tickets">Chargers Tickets</string>
+    <string name="schedule">Schedule</string>
+    <string name="select_seats">Select Seats</string>
+    <string name="order">Order</string>
+    <string name="order_id">Order #%d</string>
+    <string name="ticket_id">Order #%d</string>
+    <string name="hello_blank_fragment">Hi</string>
 </resources>
